fixed error font to be more visible

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,8 +3,7 @@ body {
   padding: 0;
 }
 /* Scrollbar */
-::-webkit-scrollbar,
-.-striped.-highlight .rt-table::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 8px;
 }
 
