--- a/src/css/pages/Dashboard.css
+++ b/src/css/pages/Dashboard.css
@@ -1,5 +1,5 @@
 .sidebar {
-  background-color: #eee;
+  background-color: #fff;
 }
 .dashboard {
   margin-bottom: 300px;
