--- a/src/css/pages/Layout.css
+++ b/src/css/pages/Layout.css
@@ -16,7 +16,7 @@
   height: 80vh;
 }
 .welcome-card {
-  margin-top: 15%;
+  margin-top: 10%;
   background-color: inherit;
 }
 nav.uk-navbar-container.footer.uk-navbar {
